<?xml version="1.0"?>
<package format="2">
    <name>openvslam_ros</name>
    <version>0.1.1</version>
    <description>The ROS package for OpenVSLAM</description>

    <maintainer email="world.applepie@gmail.com">ymd-stella</maintainer>
    <!-- xdspacelab/openvslam maintainers -->
    <maintainer email="ichihara.mitsumasa@aist.go.jp">Mitsumasa Ichihara</maintainer>
    <maintainer email="sumikura.shinya@aist.go.jp">Shinya Sumikura</maintainer>
    <maintainer email="k.sakurada@aist.go.jp">Ken Sakurada</maintainer>

    <license>2-clause BSD</license>
    <url type="website">https://openvslam-community.readthedocs.io/</url>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>openvslam</depend>
    <depend>eigen</depend>
    <depend>libgoogle-glog-dev</depend>
    <depend>image_transport</depend>
    <depend>cv_bridge</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>message_filters</depend>
    <depend>yaml-cpp</depend>
    <depend>tf2</depend>
    <depend>tf2_eigen</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_msgs</depend>
    <depend>tf2_ros</depend>

</package>
