<?xml version="1.0"?>
<package format="2">
    <name>stella_vslam_ros</name>
    <version>0.1.1</version>
    <description>The ROS package for stella_vslam</description>

    <!-- Authors of the original version of OpenVSLAM -->
    <author>Mitsumasa Ichihara</author>
    <author>Shinya Sumikura</author>
    <author>Ken Sakurada</author>
    <!-- Author/maintainer of the stella_vslam (fork version of OpenVSLAM) -->
    <maintainer email="world.applepie@gmail.com">ymd-stella</maintainer>

    <license>2-clause BSD</license>
    <url type="website">https://stella-cv.readthedocs.io/</url>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>stella_vslam</depend>
    <depend>eigen</depend>
    <depend>libgoogle-glog-dev</depend>
    <depend>image_transport</depend>
    <depend>cv_bridge</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>message_filters</depend>
    <depend>yaml-cpp</depend>
    <depend>tf2</depend>
    <depend>tf2_eigen</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>pcl_ros</depend>

</package>
